yml 서버 설정 분리 및 cors 적용